Add entry context distillation
